--- a/sources/style.css
+++ b/sources/style.css
@@ -159,7 +159,7 @@ nav {
     flex-wrap: wrap;
     opacity: 0;
     /* transition: all 2s ease; */
-    transition: height 0.4s cubic-bezier(.5,5.02,.59,1);
+    transition: height 0.4s cubic-bezier(.5, 5.02, .59, 1);
     position: relative;
     width: 100%;
     animation: brand 0.7s ease 0.4s forwards;
@@ -488,7 +488,7 @@ input[type="checkbox"] {
     .brand {
         gap: 4em;
     }
-    
+
     .icon {
         height: 17em;
         box-shadow: 0.5em 0.5em 2em #000000a8;
@@ -544,7 +544,7 @@ input[type="checkbox"] {
     .fscontainer {
         box-shadow: inset 0 0 3em 3em #020202;
     }
-    
+
     .icon {
         height: 7em;
     }
@@ -570,7 +570,7 @@ input[type="checkbox"] {
     .logotext {
         font-size: 5em;
     }
-    
+
     .icon {
         display: none;
     }
@@ -592,7 +592,7 @@ input[type="checkbox"] {
     .fscontainer {
         box-shadow: inset 0 0 2em 2em #020202;
     }
-    
+
 }
 
 /* @media (max-width: 845px) {
@@ -692,10 +692,12 @@ input[type="checkbox"] {
         transform: rotate(0deg);
         scale: 1;
     }
+
     50% {
         transform: rotate(180deg);
         scale: 1.2;
     }
+
     100% {
         transform: rotate(360deg);
         scale: 1;
@@ -955,7 +957,7 @@ input[type="checkbox"] {
         right: -6%;
         bottom: -90%;
     }
-    
+
     .client-img {
         height: calc(451 / 955 * 70em);
         width: 70em;
@@ -1022,7 +1024,7 @@ input[type="checkbox"] {
         color: #e2e1e1;
         line-height: 1.75em;
     }
-    
+
     .p1 {
         font-size: 2.2em;
         line-height: 1.6em;
@@ -1058,7 +1060,7 @@ input[type="checkbox"] {
     .item4 {
         grid-area: 19/1/25/6;
     }
-    
+
     .grid1container {
         width: 50em;
         margin-bottom: 7em;
@@ -1249,7 +1251,7 @@ input[type="checkbox"] {
         bottom: -30%;
         z-index: 0;
     }
-    
+
     .desc2,
     .desc3,
     .desc4 {
@@ -1304,11 +1306,12 @@ input[type="checkbox"] {
         width: 50em;
         margin-bottom: 7em;
     }
+
     .dark-circle {
         width: 200px;
         filter: blur(150px) opacity(0.8);
     }
-    
+
     .light-circle {
         width: 250px;
         filter: blur(100px) opacity(0.8);
@@ -1319,11 +1322,12 @@ input[type="checkbox"] {
     .trailer-container {
         width: 30em;
     }
+
     .dark-circle {
         width: 100px;
         filter: blur(100px) opacity(0.8);
     }
-    
+
     .light-circle {
         width: 150px;
         filter: blur(80px) opacity(0.8);
@@ -1334,11 +1338,12 @@ input[type="checkbox"] {
     .trailer-container {
         width: 20em;
     }
+
     .dark-circle {
         width: 50px;
         filter: blur(50px) opacity(0.8);
     }
-    
+
     .light-circle {
         width: 80px;
         filter: blur(50px) opacity(0.8);
@@ -1429,7 +1434,8 @@ input[type="checkbox"] {
     margin-bottom: 9em;
 }
 
-.interactive p.disclaimer, p.disclaimer span#disclaimer-text {
+.interactive p.disclaimer,
+p.disclaimer span#disclaimer-text {
     color: #5f5f5f;
     font-size: 15px;
     text-align: center;
@@ -1441,7 +1447,8 @@ p.disclaimer {
     padding: 0 50px;
 }
 
-p.disclaimer span.disclaimer-btn, #explanation {
+p.disclaimer span.disclaimer-btn,
+#explanation {
     text-decoration: underline;
     cursor: pointer;
 }
@@ -1495,7 +1502,7 @@ p.disclaimer span.disclaimer-btn, #explanation {
         color: #e2e1e1;
         line-height: 1.75em;
     }
-    
+
     .p1 {
         font-size: 2.2em;
         line-height: 1.6em;
@@ -1598,7 +1605,7 @@ p.disclaimer span.disclaimer-btn, #explanation {
     .question {
         border-bottom: 2px solid #ffffff27;
     }
-    
+
     .question button {
         font-size: 45px;
         padding: 40px 30px;
@@ -1860,9 +1867,9 @@ strong {
     overflow: hidden;
 }
 
-.jiayi p, .jiayi h2 {
+.jiayi p,
+.jiayi h2 {
     font-family: 'Montserrat', sans-serif;
-    text-shadow: 3px 3px #0000008c;
 }
 
 .jiayi p {
@@ -1870,10 +1877,22 @@ strong {
     text-align: center;
 }
 
+.jiayi p a {
+    text-decoration: underline;
+    color: #ffffff;
+}
+
+.jiayi p a strong {
+    font-weight: 600;
+    font-family: 'Montserrat', sans-serif;
+}
+
 .jiayi h2 {
     font-weight: 900;
     font-style: italic;
     color: #dc0000;
+    text-shadow: 3px 3px #0000008c;
+    text-align: center;
 }
 
 .jiayi img {
@@ -1891,6 +1910,7 @@ strong {
     border: none;
     box-shadow: 5px 5px #0000008c;
     transition: all 0.2s ease;
+    cursor: pointer;
 }
 
 .line {
@@ -1947,18 +1967,23 @@ h2 span {
     border-radius: 20px;
     padding: 40px 50px;
     transform: translateY(70px);
-    transition: all 0.5s cubic-bezier(.5,3,.4,1);
+    transition: all 0.5s cubic-bezier(.5, 3, .4, 1);
     margin: 0 3em;
 }
 
 .overlay-box.license {
     max-height: 500px;
+}
+
+.overlay-box.license,
+.overlay-box.dl {
     overflow: auto;
     -ms-overflow-style: none;
     scrollbar-width: none;
 }
 
-.overlay-box.license::-webkit-scrollbar {
+.overlay-box.license::-webkit-scrollbar,
+.overlay-box.dl::-webkit-scrollbar {
     display: none;
 }
 
@@ -1981,6 +2006,10 @@ h2 span {
 .overlay-box.alertGood,
 .overlay-box.dl {
     max-width: 600px;
+}
+
+.overlay-box.dl {
+    max-height: calc(100vh - 80px);
 }
 
 .overlay-content {
@@ -2075,11 +2104,45 @@ footer {
 }
 
 @media (min-width: 2560px) {
+
+    .jiayi {
+        padding: 40px 60px;
+        margin-bottom: 40px;
+        gap: 40px;
+    }
+
+    .jiayi p {
+        font-size: 35px;
+    }
+
+    .jiayi h2 {
+        font-size: 50px;
+        text-shadow: 3px 3px #0000008c;
+    }
+
+    .jiayi-import {
+        padding: 20px 40px;
+        font-size: 38px;
+        box-shadow: 5px 5px #0000008c;
+    }
+
+    .line {
+        width: calc(100% + 40px);
+        height: 4px;
+        margin-bottom: 40px;
+        transform: translateX(-20px);
+    }
+
+    h2 span {
+        font-size: 75px;
+        margin-right: 20px;
+    }
+
     .footer-bottom {
         width: 100vw;
         padding: 40px 80px;
     }
-    
+
     .footer-bottom p {
         font-size: 30px;
     }
@@ -2115,7 +2178,7 @@ footer {
     .fa-solid.fa-arrow-up-right-from-square {
         font-size: 30px;
     }
-    
+
 }
 
 .fas.fa-chevron-down.d-arrow {
