--- a/sources/style.css
+++ b/sources/style.css
@@ -755,7 +755,7 @@ input[type="checkbox"] {
 
 .mods-list {
     height: 400px;
-    width: calc(1174 / 1113 * 400px);
+    width: /* calc(1174 / 1113 * 400px)*/ 100%;
     object-fit: cover;
 }
 
