--- a/sources/style.css
+++ b/sources/style.css
@@ -160,7 +160,7 @@ nav {
     flex-wrap: wrap;
     opacity: 0;
     /* transition: all 2s ease; */
-    transition: height 0.4s cubic-bezier(.5, 5.02, .59, 1);
+    transition: height 0.2s cubic-bezier(.28,0,.13,1);
     position: relative;
     width: 100%;
     animation: brand 0.7s ease 0.4s forwards;
