nav fix for 1440p screen

--- a/sources/style.css
+++ b/sources/style.css
@@ -217,6 +217,10 @@ input[type="checkbox"] {
         padding: 1.2em;
     }
 
+    nav {
+        height: 10em;
+    }
+
     .logo {
         margin-left: 1.2em;
     }
